plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.4'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.pohyoja'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // spring data jpa/redis, spring security, spring starter web
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-validation'

    // Spring Security Oauth2
    implementation("org.springframework.boot:spring-boot-starter-oauth2-resource-server")

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // test - spring
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // test - h2
    testImplementation 'com.h2database:h2'

    // JUnit5, AssertJ
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // mysql
    runtimeOnly 'com.mysql:mysql-connector-j'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'

    // Firebase admin SDK
    implementation 'com.google.firebase:firebase-admin:9.4.3'

    // 외부 라이브러리: 로그에 sql query 파라미터 정보 알려주는 것
    implementation 'com.github.gavlyukovskiy:datasource-proxy-spring-boot-starter:1.11.0'
}

tasks.named('test') {
    useJUnitPlatform()
}
